# totoo-ba-backend

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINTER.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  pull_request_template.md  pyproject.toml  requirements.txt  run_production.py
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  FEATURE_REQUEST.yaml  REPORT_VULNERABILITY.yaml  config.yaml
.github/workflows/: ruff.yml
app/: main.py
app/api/: deps.py  products.py
app/api/repository/: database_repository.py  products_repository.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  business.py  cosmetic_industry.py  drug_industry.py  drug_products.py  drugs_new_applications.py  food_industry.py  food_products.py  medical_device_industry.py  product.py
app/schemas/: __init__.py  cosmetic_industry.py  drug_industry.py  drug_products.py  drugs_new_applications.py  food_industry.py  food_products.py  medical_device_industry.py  product.py
app/services/: extractor.py  extractor_to_db.py  fda_verification.py  ocr_service.py  product_verification_service.py  vision_service.py
app/services/upsert_extractors/: drug_industry_extractor.py  drug_products_extractor.py  food_industry_extractor.py  food_products_extractor.py
app/utils/: helpers.py
bruno_api_testing/hf/: HealthCheck.bru  bruno.json  new verify image.bru  newVerify.bru  verify-image.bru  verify.bru
docs/: EVO.md
migrations/: add_drug_products_fts.sql  add_food_products_fts_index.sql  add_fts_search_vectors.sql  enable_pg_trgm_extension.sql
tests/: test_main.py
tests/services/: test_product_verification_service.py
